# snow-white

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  INSTALLATION.md  ONBOARDING.md  README.md  build.gradle  commitlint.config.mjs  gradle.properties  index.yaml  lint-staged.config.cjs  lint-staged.config.js  lint-staged.config.mjs  lombok.config  mvnw  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  prettier.config.js  prettier.config.mjs  settings.gradle
.claude/: settings.local.json
.github/: dependabot.yml  kubescore_values.yml  labeler.yml
.run/: API Index.run.xml  API Sync Job.run.xml  Api Gateway.run.xml  Example Application.run.xml  Kafka Event Filter.run.xml  OTEL Event Filter.run.xml  OpenAPI Coverage Service.run.xml  Quality-Gate API.run.xml  Report Coordination Service.run.xml  Report Coordinator API.run.xml  development tooling.run.xml  rebuild dev_docker-compose.yaml_ Compose Deployment.run.xml  restart dev_docker-compose.yaml_ Compose Deployment.run.xml  webapp_dev.run.xml
dev/: .gitignore  architecture.puml  docker-compose.yaml  otel-collector-config.yaml  snow-white.json  sonar.yaml
development-environment/: docker-compose.yaml  otel-collector-config.yaml
docs/: Gemfile  _config.yml  architecture-detailed.puml  architecture.md  architecture.puml  index.md  installation.md  license.md  onboarding.md  (+3 more)
microservices/tracing-data-processor/: pom.xml  pyproject.toml
(+1936 files in other folders)
